# sql-exercises

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
db/: generate.py  seed.py  utils.py
grade/: main.py  submissions.py
postgres-init/: 01_schema.sql  02_data.sql
